modified:   components/CatalogItemForBlog.vue 	modified:   components/CatalogItemForNote.vue 	modified:   components/CatalogSidebarForBlog.vue 	modified:   components/CatalogSidebarForNote.vue 	modified:   components/ElementCard.vue 	modified:   components/FooterNav.vue 	modified:   components/HeaderNav.vue 	modified:   components/ImageLightbox.vue 	modified:   components/MarkdownBlog.vue 	modified:   components/MarkdownNote.vue 	modified:   components/PostCardItem.vue 	modified:   components/content/CopyContent.vue 	modified:   components/content/ImageList.vue 	modified:   components/content/IntroCard.vue 	modified:   components/content/ProseCode.vue 	modified:   components/content/TipBox.vue 	modified:   content/about.md 	modified:   content/article/tutorial/2.write-article.md 	modified:   content/article/tutorial/4.magic-interaction.md 	modified:   pages/about.vue 	modified:   pages/article/[...slug].vue 	modified:   pages/fondations-transdisciplinaires.vue 	modified:   pages/index.vue 	modified:   pages/list.vue 	modified:   pages/subscribe.vue

--- a/content/article/tutorial/2.write-article.md
+++ b/content/article/tutorial/2.write-article.md
@@ -33,7 +33,7 @@ You can read the next chapter of this article *[How to write](#how-to-write)* to
 
 Firstly you may notice that inside :file_folder: `/content` folder there're two special articles:
 
-* :page_facing_up: `/content/index.md` this file setting the introduction content of the [Home Page](/) (the content of purple box at the top of Home Page)
+* :page_facing_up: `/content/index.md` this file setting the introduction content of the [Home Page](/) (the content of indigo box at the top of Home Page)
 
 * :page_facing_up: `/content/about.md` this file setting the content of [About Page](/about)
 
