--- a/content/article/tutorial/4.magic-interaction.md
+++ b/content/article/tutorial/4.magic-interaction.md
@@ -7,11 +7,11 @@ cover: ./images/interaction.jpg
 This article show some magic interaction about BlogiNote.
 
 ## Change Mode
-As the name of **BlogiNote**, it combines [Blog]{.text-purple-400 .font-bold} and [Note]{.text-green-400 .font-bold} with Flx[i]{.text-yellow-500 .font-bold}ble layout.
+As the name of **BlogiNote**, it combines [Blog]{.text-indigo-400 .font-bold} and [Note]{.text-green-400 .font-bold} with Flx[i]{.text-yellow-500 .font-bold}ble layout.
 
 You can **switch the Mode** of the website between 'blog' mode and 'note' mode, just by clicking a button :sunglasses:
 
-For example at [Home Page](/), if you switch the mode to ['blog']{.text-purple-400 .font-bold} mode, the page will show you some articles a list layout, you can get the recently updated posts like what you usually do when browser some news feed.
+For example at [Home Page](/), if you switch the mode to ['blog']{.text-indigo-400 .font-bold} mode, the page will show you some articles a list layout, you can get the recently updated posts like what you usually do when browser some news feed.
 
 If you switch the mode to the ['note']{.text-green-400 .font-bold} mode, the page will show all articles within a directory system in a grid layout, you can browser your notes like what you usually do in your PC.
 
