--- a/content/article/example/1.example-article-en.md
+++ b/content/article/example/1.example-article-en.md
@@ -1,7 +1,7 @@
 ---
 series: Article Example
 articleType: note
-showTime: false
+showTime: true
 showOutdatedWarning: false
 created: 2022-07-01
 updated: 2022-07-02
