--- a/content/article/lightpaper/1.1- Turfu name.md
+++ b/content/article/lightpaper/1.1- Turfu name.md
@@ -7,6 +7,7 @@ created: 2022-07-01
 updated: 2022-07-02
 tags:
   - English
+  - TURFU
 ---
 _**Turfu** 
 verlan of "Futur" contemporary french argot 
